--- a/blue-island-resort.html
+++ b/blue-island-resort.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title> Blue Island Resort </title>
   </head>
   <body>
