add inline tag to accommodations webpage.

--- a/accommodations.html
+++ b/accommodations.html
@@ -7,10 +7,9 @@
   <body>
     <h1> Accommodations. </h1>
     <h2> Choose your perfect room. </h2>
-    <p> The energies of the four elements <br/>
-      – Earth, Fire, Water and Air – <br/>
-      are reflected in the temperament and character of every individual person. <br/>
-      A person can be down-to-earth, fiery, cool or breezy, depending on which element predominates in them. <br/>
-      Have we aroused your interest in the elements of our rooms? <br/>
-      The entire team at Blue Island Resort are looking forward to providing you with a fantastic holiday!
+    <p> The energies of the four elements – Earth, Fire, Water and Air – <br/>
+        Are reflected in the temperament and character of every individual person. <br/>
+        A person can be down-to-earth, fiery, cool or breezy, depending on which element predominates in them. <br/>
+        Have we aroused your interest in the elements of our rooms? <br/>
+        <strong>The entire team at Blue Island Resort are looking forward to providing you with a fantastic holiday!</strong>
 </html>
