modified text arrangement in all website files and change photo on accomodations page.

--- a/activities.html
+++ b/activities.html
@@ -14,17 +14,18 @@
         There is nothing better for us, than bringing along new visitors to Blue Island Resort <br/>
         on each of our visits to savor this experience. So, don’t miss them! <br/>
     <h3> Have a look at some of the activities you can enjoy in the Island. </h3>
+        <img src="img/sunset-activities.jpg" alt="Sunset in Blue Island.">
     <p> With an abundance of activities from Boat cruises to Dolphins watching to Surf lessons and Ski Diving, <br/>
         as well as mini-excursions to “Ushuaya Beach” to see the Sunset at the stunning “End of the World”, <br/>
         and free time to explore the village near the Resort for yourself, <br/>
-        Blue Island may very well become the greatest holiday experience of your life. </h3>
-      <ol>
-        <li>Dolphins  Watching Boat Tour.</li>
-        <li>Sunrise in Ushuaya Beach</li>
-        <li>Western Blue island from Kiribati till Konga.</li>
-        <li>Piki Taki Caves & Grottos with Boat & Kayak.</li>
-        <li>Bennny Cave & Myriam Beach</li>
-      </ol>
+        Blue Island may very well become the greatest holiday experience of your life. <p>
+    <p>
+       Dolphins  Watching Boat Tour.<br/>
+       Sunrise in Ushuaya Beach.<br/>
+       Western Blue island from Kiribati till Konga.<br/>
+       Piki Taki Caves & Grottos with Boat & Kayak.<br/>
+       Bennny Cave & Myriam Beach.<br/></p>
+
       <p><strong>We explain you all the possibilities right when you arrive at Blue Island Resort.</strong></p>
   </body>
 </html>
