--- a/booking-arrangements.html
+++ b/booking-arrangements.html
@@ -14,14 +14,15 @@
         Spend your time relaxing at World renown beaches, <br/>
         just a step away form the Resort or just explore whatever the Island has to offer! <br/>
     <p> <strong>The 20% discount applies to room rate only. 30 days advance purchase required.<strong> </p>
+      <img src="img/book-early-booking_arrangements.jpg" alt="20 % Discount.">
     <h3> Early Summer sale </h3>
-      <ul>
-        <li>Discount: Save 15 % on any of our rooms.</li>
-        <li>Travel: 11th April – 3rd June 2018.</li>
-        <li>Board Basis: All Inclusive.</li>
-        <li>Book till: 31st March 2018.</li>
-        <li>Minimum Stay: 5 Nights.</li>
-      </ul>
+      <p>
+        Discount: Save 15 % on any of our rooms.<br/>
+        Travel: 11th April – 3rd June 2018.<br/>
+        Board Basis: All Inclusive.<br/>
+        Book till: 31st March 2018.<br/>
+        Minimum Stay: 5 Nights.<br/>
+      </p>
       <p><strong>The 15% discount applies to room rate only. Book till 31 st of March.</strong></p>
   </body>
 </html>
