--- a/accommodations.html
+++ b/accommodations.html
@@ -7,6 +7,7 @@
   <body>
     <h1> Accommodations. </h1>
     <h2> Choose your perfect room. </h2>
+    <img src="img/four-elements-accommodations.png" alt="The four elements.">
     <p> The energies of the four elements – Earth, Fire, Water and Air – <br/>
         Are reflected in the temperament and character of every individual person. <br/>
         A person can be down-to-earth, fiery, cool or breezy, depending on which element predominates in them. <br/>
