--- a/blue-island-resort.html
+++ b/blue-island-resort.html
@@ -7,6 +7,19 @@
   <body>
     <h1> Blue Island Resort. </h1>
     <h2> A beautiful resort within paradise. </h2>
-    <p> Blue Island Resort is the perfect destination for that holiday getaway you’ve been craving since you planned to visit this paradise. Boasting some of the most breathtaking beaches, mouth-watering meals, and absolutely insane sunsets, Blue Island easily proves itself to be one of Europe’s best hidden treasures. In 2012 Blue Island received the Quality Coast Gold Award for its efforts to become a sustainable tourism destination. Because of this award, Blue Island has been selected for   inclusion in the global atlas for sustainable tourism. It’s truly become our pleasure to show our guests how and why it’s so easy to fall in love with everything that Blue Island has to offer.  </p>
+    <img src="img/blue-island-resort.jpg" alt="Blue Island Resort.">
+    <p> Blue Island Resort is the perfect destination for that holiday getaway<br/>
+        you’ve been craving since you planned to visit this paradise. <br/>
+        Boasting some of the most breathtaking beaches, mouth-watering meals, <br/>
+        and absolutely insane sunsets, Blue Island easily proves itself to be <br/>
+        one of North Africa best hidden treasures. <br/>
+        In 2012 Blue Island received the Quality Coast Gold Award <br/>
+        for its efforts to become a sustainable tourism destination. <br/>
+        Because of this award, Blue Island has been selected for inclusion <br/>
+        in the global atlas for sustainable tourism. <br/>
+        It’s truly become our pleasure to show our guests how and why <br/>
+        it’s so easy to fall in love with everything that Blue Island has to offer.  </p>
+    <h3>We invite you to have a better look inside of Blue Island Resort's Website!</h3>
+    <p>We hope to provide you with a wonderful vacation experience!!</p>
   </body>
 </html>
