--- a/contacts.html
+++ b/contacts.html
@@ -9,9 +9,12 @@
     <h2> Blue Island Resort </h2>
     <h3>Address & Contacts</h3>
     <p>Ushuaya Road - 8600 554 Blue Island - Morocco</p>
-    <ul>
-      <li>(+351) 927576165</li>
-      <li>Check-in/Check-out: 2 pm – 7 pm</li>
-      <li>Late Check-in/Check-out: 7 pm – 10 pm</li>
-   </ul>
+    <p>
+      (+yyy) xxxxxxxxx<br/>
+      Check-in 2 pm<br/>
+      Check-out: 11 am<br/>
+      Late Check-in: Please contact us!<br/>
+      Late Check-out: till 1 pm (extra charge)
+   </p>
+   <h3>Call +YYY XXXXXXXXX</h3>
 </html>
