--- a/accommodations.html
+++ b/accommodations.html
@@ -4,13 +4,19 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title> Blue Island Resort </title>
   </head>
+
   <body>
     <h1> Accommodations. </h1>
-    <h2> Choose your perfect room. </h2>
+
+    <h2> We have four stunning Rooms with it's own Decor element. </h2>
+
     <img src="img/four-elements-accommodations.png" alt="The four elements.">
+
     <p> The energies of the four elements – Earth, Fire, Water and Air – <br/>
         Are reflected in the temperament and character of every individual person. <br/>
         A person can be down-to-earth, fiery, cool or breezy, depending on which element predominates in them. <br/>
         Have we aroused your interest in the elements of our rooms? <br/>
-        <strong>The entire team at Blue Island Resort are looking forward to providing you with a fantastic holiday!</strong>
+    <p>Here is a link to our Rooms page <a href="four-rooms.html">Four Stunning Rooms.</a>.</p>
+
+     <p><strong>The entire team at Blue Island Resort are looking forward to providing you with a fantastic holiday!</strong></p>
 </html>
