add new room photos to img.

--- a/four-rooms.html
+++ b/four-rooms.html
@@ -9,7 +9,15 @@
     <h1> Rooms. </h1>
 
     <h2> Choose your perfect Room. </h2>
-      
+    <h3>Fire Suite.</h3>
+        <img src="img/room-rooms.jpg" alt="Fire Suite.">
+    <h3>Water Suite</h3>
+        <img src="img/Bamboo-Bedroom-Furniture-Sets.jpg" alt="Water Suite.">
+    <h3>Air Suite</h3>
+        <img src="bamboo-room" alt="Air Suite.">
+    <h3>Earth Suite</h3>
+        <img src="img/Bamboo-Modern-Canopy-Bed.jpg" alt="Earth Suite.">
+
     <p>
       <strong>Rooms Amenities:</strong></p><br/>
     <p> King size bed.<br/>
