small update to all pages.

--- a/activities.html
+++ b/activities.html
@@ -27,5 +27,6 @@
        Bennny Cave & Myriam Beach.<br/></p>
 
       <p><strong>We explain you all the possibilities right when you arrive at Blue Island Resort.</strong></p>
+      <p>Here is a link to our Contacts page <a href="contacts.html">Contacts Page</a>.</p>
   </body>
 </html>
