--- a/blue-island-resort.html
+++ b/blue-island-resort.html
@@ -20,6 +20,7 @@
         It’s truly become our pleasure to show our guests how and why <br/>
         it’s so easy to fall in love with everything that Blue Island has to offer.  </p>
     <h3>We invite you to have a better look inside of Blue Island Resort's Website!</h3>
+    <p>Here is a link to our Accommodations page <a href="accommodations.html">Accommodations Page</a>.</p>
     <p>We hope to provide you with a wonderful vacation experience!!</p>
   </body>
 </html>
