--- a/booking-arrangements.html
+++ b/booking-arrangements.html
@@ -24,5 +24,6 @@
         Minimum Stay: 5 Nights.<br/>
       </p>
       <p><strong>The 15% discount applies to room rate only. Book till 31 st of March.</strong></p>
+      <p>Here is a link to our Activities page <a href="activities.html">Activities Page</a>.</p>
   </body>
 </html>
