--- a/contacts.html
+++ b/contacts.html
@@ -17,4 +17,5 @@
       Late Check-out: till 1 pm (extra charge)
    </p>
    <h3>Call +YYY XXXXXXXXX</h3>
+   <p>Back to Main page <a href="blue-island-resort.html">Back to Main Page</a>.</p>
 </html>
