--- a/four-rooms.html
+++ b/four-rooms.html
@@ -9,33 +9,37 @@
     <h1> Rooms. </h1>
 
     <h2> Choose your perfect Room. </h2>
-    <h3>Fire Suite.</h3>
+
+    <p>Fire Suite.</p>
         <img src="img/room-rooms.jpg" alt="Fire Suite.">
-    <h3>Water Suite</h3>
+
+    <p>Water Suite</p>
         <img src="img/Bamboo-Bedroom-Furniture-Sets.jpg" alt="Water Suite.">
-    <h3>Air Suite</h3>
-        <img src="bamboo-room" alt="Air Suite.">
-    <h3>Earth Suite</h3>
-        <img src="img/Bamboo-Modern-Canopy-Bed.jpg" alt="Earth Suite.">
+
+
+
+    <p>Earth Suite & Air Suite</p>
+       <img src="img/Bamboo-Modern-Canopy-Bed.jpg" alt="Earth & Air Suite.">
 
     <p>
-      <strong>Rooms Amenities:</strong></p><br/>
+      <strong>Rooms Amenities:</strong></p>
     <p> King size bed.<br/>
         Furnished with bamboo.<br/>
         Acommodates 2 Persons.<br/>
         Linen is 100% cotton.<br/>
         In-room Air conditioning.<br/>
-        Hairdryer.<br/>
-        Minibar.<br/>
-        Outdoor Jacuzzy.<br/>
         Indoor Bathtubh & Shower.<br/>
-        Telescope.<br/>
+        Outdoor Jacuzzy.<br/>
+        Hair-dryer.<br/>
+        Mini-bar.<br/>
+        Binoculars.<br/>
+
       </P>
 
 
 
 
-    <p>Here is a link to our Contacts page <a href="contacts.html">Contacts Page</a>.</p>
+    <p>Here is a link to our Booking Arrangements page <a href="booking-arrangements.html">Booking Arrangements</a>.</p>
 
      <p><strong>The entire team at Blue Island Resort are looking forward to providing you with a fantastic holiday!</strong></p>
 </html>
