styling classes in index page.

--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
     <h1> Blue Island Resort. </h1>
     <h2> A beautiful resort within paradise. </h2>
     <img src="img/blue-island-resort.jpg" alt="Blue Island Resort.">
-    <p> Blue Island Resort is the perfect destination for that holiday getaway<br/>
-        you’ve been craving since you planned to visit this paradise. <br/>
-        Boasting some of the most breathtaking beaches, mouth-watering meals, <br/>
+    <p> <strong class="important">Blue Island Resort</strong> is the perfect destination for that holiday getaway<br/>
+        you’ve been craving since you planned to visit this paradise.</p> <br/>
+
+     <p class="about">Boasting some of the most breathtaking beaches, mouth-watering meals, <br/>
         and absolutely insane sunsets, Blue Island easily proves itself to be <br/>
-        one of North Africa best hidden treasures. <br/>
-        In 2012 Blue Island received the Quality Coast Gold Award <br/>
+        one of North Africa best hidden treasures.</p> 
+
+    <p> In 2012 <strong class="important">Blue Island</strong> received the Quality Coast Gold Award <br/>
         for its efforts to become a sustainable tourism destination. <br/>
         Because of this award, Blue Island has been selected for inclusion <br/>
-        in the global atlas for sustainable tourism. <br/>
+        in the global atlas for <strong class="important">sustainable tourism</strong>. <br/>
         It’s truly become our pleasure to show our guests how and why <br/>
         it’s so easy to fall in love with everything that Blue Island has to offer.  </p>
+
     <h3>We invite you to have a better look inside of Blue Island Resort's Website!</h3>
     <p>Here is a link to our Accommodations page <a href="accommodations.html">Accommodations Page</a>.</p>
-    <p>We hope to provide you with a wonderful vacation experience!!</p>
+    <p>We hope to provide you with a <em class="important">wonderful vacation experience!</em> <br/>
+       If you have more questions, please <a href="mailto:joshhortt@yahoo.com" class"important">Email me!</a> if you need anything. </p>
   </body>
 </html>
